--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "http-proxy-middleware": "^0.19.1",
+    "immutability-helper": "^3.0.0",
+    "leaflet": "^1.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-leaflet": "^2.2.0",
+    "react-leaflet-control": "^2.1.1",
+    "react-scripts": "2.1.3",
+    "react-semantic-ui-range": "^0.6.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +29,16 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
+    "prettier": "1.16.1",
+    "pretty-quick": "^1.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
