--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-leaflet": "^2.2.0",
     "react-leaflet-control": "^2.1.1",
     "react-scripts": "2.1.3",
+    "react-select": "^3.0.4",
     "react-semantic-ui-range": "^0.6.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
