--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.1.1",
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.1",
+    "jszip-utils": "^0.0.2"
   }
 }
