--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"cd client && yarn start\" \"cd server && cd src && py fetchImages.py\""
+    "start": "concurrently \"cd client && yarn start\" \"cd server && cd src && python3 fetchImages.py\""
   },
   "dependencies": {
     "@material-ui/core": "^4.1.1",
+    "antd": "^3.20.0",
+    "bootstrap": "^3",
     "concurrently": "^4.1.0",
     "file-saver": "^2.0.2",
     "jszip": "^3.2.1",
-    "jszip-utils": "^0.0.2"
+    "jszip-utils": "^0.0.2",
+    "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.13",
+    "react": "^16.8.6",
+    "react-bootstrap-slider": "^2.2.2",
+    "react-dom": "^16.8.6"
   }
 }
