--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,41 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "license": "MIT",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "eslint-plugin-prettier": "^3.0.1",
-    "express": "^4.16.4",
-    "husky": "^1.3.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "request": "^2.88.0"
+    "http-proxy-middleware": "^0.19.1",
+    "immutability-helper": "^3.0.0",
+    "leaflet": "^1.4.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-leaflet": "^2.2.0",
+    "react-leaflet-control": "^2.1.1",
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
+    "react-semantic-ui-range": "^0.6.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
-    "start": "yarn run nodemon src/index.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
+    "prettier": "1.16.1",
+    "pretty-quick": "^1.10.0"
   },
   "husky": {
     "hooks": {
